# agent-server

./: .dockerignore  .env.client.example  .env.example  .env.local.example  .env.railway.example  .env.vastai.example  .gitignore  Dockerfile  README.md  langgraph.json  project1-spec.md  pyproject.toml  serve.py  start-local.bat  start-local.sh  startup.sh
.github/workflows/: vast-create.yml  vast-destroy.yml  vast-redeploy.yml  vast-start.yml  vast-stop.yml
src/agent/: agent.py  config.py  graph.py  metrics.py  state.py  tools.py
tests/: conftest.py  test_agent.py  test_tools.py
