[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "agent-server"
version = "0.1.0"
description = "LangGraph ReAct agent server — infrastructure comparison backend"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2",
    "langgraph-cli[inmem]>=0.1",
    "langchain-openai>=0.2",
    "duckduckgo-search>=6.0",
    "markdownify>=0.11",
    "httpx>=0.27",       # used by langgraph client
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "standard"
